--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@react-spring/web": "^9.7.5",
+    "@types/jquery": "^3.5.32",
     "aos": "^2.3.4",
     "axios": "^1.7.9",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^11.13.5",
     "gsap": "^3.12.7",
+    "jquery": "^3.7.1",
+    "jquery.ripples": "^0.6.3",
     "lucide-react": "^0.487.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
